# mcp_data_product

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
apps/client/src/: examples.py  logging_config.py  main.py  mcp_connection.py  queries.py  resources.py  tools.py
apps/mcp_server/src/: server.py
resources/data_product1/: dp_info.yaml
resources/data_product2/: dp_info.yaml
resources/unstructured/: life_story.txt
src/: logging_config.py
src/client/: client.py
src/mcp_server/: server.py
